--- a/user-app/public/final.css
+++ b/user-app/public/final.css
@@ -1,6 +1,48 @@
 *{
-  font-family: "Nova Square", cursive;
+  font-family:Arial,sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
+.container{
+  display: flex;
+}
+.sinistra{
+  flex: 0 0 60%;
+  background-color: rgb(204, 82, 82);
+  height: 100vh;
+}
+
+.destra {
+  flex: 1;
+} 
+
+.testo-sinistra{
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10vh;
+}
+.login{
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10vh;
+}
+
+.form{
+  color: black;
+  height: 100px;
+  display: flex; /*flexbox*/
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 24px;
+  margin-top: 10vh;
+}
+
