--- a/user-app/public/final.css
+++ b/user-app/public/final.css
@@ -15,6 +15,12 @@ header{
   align-items: center;
 }
 
+#myChart{
+  position: relative;
+  width: 50vw;
+  height: 50vh;
+}
+
 nav{
   height: 80px;
   display: flex; /*flexbox*/
