--- a/user-app/public/final.css
+++ b/user-app/public/final.css
@@ -9,16 +9,10 @@
 
 /*header color background*/
 header{
-  background-color: transparent;
+  background-color:rgb(204, 82, 82);
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-#myChart{
-  position: relative;
-  width: 50vw;
-  height: 50vh;
 }
 
 nav{
@@ -36,8 +30,7 @@ nav{
   display: inline-block;
   max-height: 60px;
   width: auto;
-  gap: 20px;
-  
+  margin-left: 10px;
 }
 
 
@@ -62,8 +55,7 @@ nav ul{
   display: flex;
   justify-content: space-between; 
   align-items: center;
-  gap: 60px;
-
+  gap: 100px;
 }
 
 /*questo fa in modo che quando passi sopra alle parole del menù le caselline si illuminano*/
@@ -73,7 +65,7 @@ nav li:hover{
 
 /*questo fa in modo che quando passi sopra alle parole del menù esse cambiano colore*/
 nav a:hover{
-  color: dodgerblue;
+  color: rgb(201, 86, 140);
 }
 
 
@@ -101,6 +93,7 @@ nav a:hover{
   flex-direction: column;
   margin-top: 10vh;
 }
+
 .login{
   color: black;
   display: flex;
@@ -130,12 +123,29 @@ nav a:hover{
   gap: 20px;
 }
 
-/*consumptions*/
 
-.consumptions{
+.billing{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
+  gap: 20px;
+
+}
+
+.titols{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.graphs{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
   flex-direction: column;
   gap: 20px;
 }
